# Build example 
add_executable(aufgabe_2_und_3 aufgabe_2_und_3.cpp
example example.cpp
circle circle.cpp
vec2 vec2.cpp)

add_executable(aufgabe_6 aufgabe_6.cpp
example example.cpp
circle circle.cpp
vec2 vec2.cpp)

#new add add_executable for every executable file, also include all of the required files necessary to start the execztable

add_executable(aufgabe_11 aufgabe_11.cpp)

add_executable(aufgabe_12 aufgabe_12.cpp)

add_executable(aufgabe_13 aufgabe_13.cpp)

add_executable(aufgabe_9 aufgabe_9.cpp)
